Animal fix, and other small changes