@@ -5,7 +5,7 @@ import java.util.List;
 public class SelectYoungest implements SelectionStrategy{
     @Override
     public Animal select(Animal a, List<Animal> as) {
-        Animal youngest = as.get(0);
+        Animal youngest = as.getFirst();
         for (Animal animal : as) {
             if (animal.get_age() < youngest.get_age()) {
                 youngest = animal;
